# ppx_system

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  ppx_system.opam
lib/: dune  expander.ml  ppx_system.ml  system.ml  uname.c  uname.ml
runtime/: dune  ppx_system_runtime.mli
test/: dune  test_ppx_system.ml
